--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu-curriculo</title>
-    <link rel=""stilesheet" href="stily.css">
+    <link rel="stylesheet" href="reset.css"> 
+    <link rel="stylesheet" href="style.css"> 
 </head>
 
 <body>
@@ -44,7 +45,7 @@
     </section>
 
     <section id="experienciaProfissional">
-        <h2 class="titulo-secao">Experiência profissional</h2>
+        <h1 class="titulo-secao">Experiência profissional</h1>
 
         <h3>Auxiliar Administrativo</h3>
         
@@ -119,12 +120,11 @@
             <header>
                 <h1>Aprendendo HTML</h1>
                 <h2>Criando uma página com HTML semântico</h2>
-                <p>Mario Cabral</p>
-                <p>1º Fevereiro 2024</p>
+                <span>Mario Cabral</span>
+                <span>1º Fevereiro 2024</span>
             </header>
 
-            <p>Nesta página, apesar de não ficar visível para o usuário, a estrutura do HTML segue um padrão semântico
-                em que... <span><a href="#hardSkills">Continue lendo</a></span></p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat minus amet eveniet numquam magni, unde ex aperiam reiciendis quas ratione at, corporis voluptatibus nesciunt odio fuga illum quaerat maxime explicabo officiis? Facilis cum dolore aliquid iusto adipisci iste voluptatibus magni enim in nesciunt officiis repudiandae iure quam </p><a href="#" class="continuelendo">Continue lendo</a>
             <!-- #id -> ancoramento -->
         </article>
         <article>
@@ -135,19 +135,19 @@
                 <span>5º mar 2024</span>
             </header>
 
-            <p>Aprendendo a gerenciar as expectativas e a ansiedade enquanto aguardamos o tão esperado momento quando...
-                <span><a href="#softSkills">Continue lendo</a></span></p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit possimus tempora voluptatum perferendis nulla quis cum vel aut sunt exercitationem beatae, magnam sequi adipisci quidem optio ex odit dolor. Itaque fuga error corporis quasi sint cupiditate adipisci hic optio consectetur?
+                <span><a href="#softSkills" class="continuelendo " >Continue lendo</a></span></p>
         </article>
         <article>
             <header>
                 <h1>Sextou, família?</h1>
                 <h2>A dúvida é se tem happy hour com o VT</h2>
-                <p>O professor é legal</p>
-                <p>5º mar 2024</p>
+                <span>O professor é legal</span>
+                <span>5º mar 2024</span>
             </header>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero molestias distinctio debitis assumenda velit harum nisi...
-                <span><a href="#softSkills">Continue lendo</a></span></p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A debitis officiis aliquid rerum blanditiis mollitia id hic earum nemo est?
+               </p> <a href="#softSkills" class="continuelendo" >Continue lendo</a>
         </article>
         <!-- Copiar linhas:
         1º selecione as linhas a serem copiadas
@@ -167,8 +167,7 @@
             }
         </style>
 
-        <!-- <q>Quem não erra, não aprende</q>
-        <q>Quem ensina, aprende em dobro</q> -->
+        
 
     </section>
 </body>
